--- a/index.html
+++ b/index.html
@@ -1,12 +1,135 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Седона</title>
+</head>
+<body>
+    <header class="page-header">
+      <nav class="navigation">
+        <img class="logo" src="#" alt="Логотип сайта Седона">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+      </nav>
+      <nav class="navigation-user">
+        <li class="navigation-item">
+          <button type="button">
+            <span class="visually-hidden">Поиск</span>
+          </button>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">Избранное</span>
+          </a>
+        </li>
+        <li class="navigation-item">
+          <a class="button" href="#">
+            Хочу сюда!
+          </a>
+        </li>
+      </nav>
+    </header>
+    <main class="main-index">
+      <h1>Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</h1>
+      <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3>Настоящий городок</h3>
+            <p class="advantages-item--description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          </li>
+          <li class="advantages-img">
+            <img src="#" alt="Пейзаж города на фоне гор и цветов">
+          </li>
+          <li class="advantages-item">
+            <h3>Небольшая площадь</h3>
+            <p class="advantages-item--description">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Красивая дорога</h3>
+            <p class="advantages-item--description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Мало туристов</h3>
+            <p class="advantages-item--description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advantages-img">
+            <img src="#" alt="Пейзаж каньона на фоне гор и растительности">
+          </li>
+          <li class="advantages-item">
+            <h3>Там есть мост дьявола</h3>
+            <p class="advantages-item--description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
+      <section class="services">
+        <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <p>Опытный персонал и качественное обслуживание!</p>
+        <ul class="services-list">
+          <li class="services-item">
+            <h3>Жильё</h3>
+            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="services-item">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="services-item">
+            <h3>Сувениры</h3>
+            <p>Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="conversion">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button" href="#">
+          Поиск гостиницы в седоне
+        </a>
+      </section>
+      <section class="subscribe">
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <input type="email" placeholder="Ваш e-mail">
+          <button class="button" type="submit">Подписаться</button>
+        </form>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <ul class="social-list">
+        <li class="social-item">
+          <a href="#">
+            <p class="visually-hidden">Вконтакте</p>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="#">
+            <p class="visually-hidden">Телеграм</p>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="#">
+            <p class="visually-hidden">Ютуб</p>
+          </a>
+        </li>
+      </ul>
+      <address>
+        <a href="tel:88128121212">+7 (812) 812-12-12</a>
+      </address>
+      <a href="https://htmlacademy.ru/intensive/htmlcss"><img class="footer-logo" src="#" alt="Логотип сайта HTMLAcademy"></a>
+    </footer>
+</body>
 </html>
