Разметка index.html, без ховера

--- a/catalog.html
+++ b/catalog.html
@@ -8,8 +8,8 @@
 <body>
     <header class="page-header">
         <nav class="navigation">
-          <a href="index.html">
-            <img class="logo" src="#" alt="Логотип сайта Седона">
+          <a class="navigation-link" href="index.html">
+            <img class="logo" src="images/logo.svg" alt="Логотип сайта Седона">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -25,9 +25,9 @@
         </nav>
         <nav class="navigation-user">
           <li class="navigation-item">
-            <button type="button">
+            <a class="navigation-limk">
               <span class="visually-hidden">Поиск</span>
-            </button>
+            </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
@@ -137,7 +137,7 @@
 
           <ul class="apartments-list">
             <li class="apartments-list-item">
-              <img src="#" alt="Выход из пещеры с видом на звезды">
+              <img src="images/amara-resort-spa.jpg" alt="Выход из пещеры с видом на звезды">
               <h3>Amara Resort & Spa</h3>
               <p class="apartments-item-type">Гостиница</p>
               <b class="apartments-item-price">От 4000 ₽</b>
@@ -146,7 +146,7 @@
               <p class="apartments-item-rate">Рейтинг: 8,5</p>
             </li>
             <li class="apartments-list-item">
-              <img src="#" alt="Вид на горы на фоне пасмурных облаков и радуги">
+              <img src="images/villas-at-poco-diablo.jpg" alt="Вид на горы на фоне пасмурных облаков и радуги">
               <h3>Villas at Poco Diablo</h3>
               <p class="apartments-item-type">Гостиница</p>
               <b class="apartments-item-price">От 5000 ₽</b>
@@ -155,7 +155,7 @@
               <p class="apartments-item-rate">Рейтинг: 9,2</p>
             </li>
             <li class="apartments-list-item">
-              <img src="#" alt="Вид на каньон на фоне растительности">
+              <img src="images/desert-quail-inn.jpg" alt="Вид на каньон на фоне растительности">
               <h3>Desert Quail Inn</h3>
               <p class="apartments-item-type">Гостиница</p>
               <b class="apartments-item-price">От 2500 ₽</b>
@@ -164,7 +164,7 @@
               <p class="apartments-item-rate">Рейтинг: 6,9</p>
             </li>
             <li class="apartments-list-item">
-              <img src="#" alt="Вид на каньон на фоне звездного неба">
+              <img src="images/green-tree-inn.jpg" alt="Вид на каньон на фоне звездного неба">
               <h3>GreenTree Inn</h3>
               <p class="apartments-item-type">Гостиница</p>
               <b class="apartments-item-price">От 1500 ₽</b>
@@ -232,7 +232,7 @@
         <address>
           <a href="tel:88128121212">+7 (812) 812-12-12</a>
         </address>
-        <a href="https://htmlacademy.ru/intensive/htmlcss"><img class="footer-logo" src="#" alt="Логотип сайта HTMLAcademy"></a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img class="footer-logo" src="images/logo-htmlacademy.svg" alt="Логотип сайта HTMLAcademy"></a>
       </footer>
 </body>
 </html>
