--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </header>
   <main class="main-index">
     <section class="welcome">
-      <img class="welcome-text-image" src='../2547033-sedona-2-master/images/welcome.svg' alt="Добро пожаловать в Седону">
+      <img class="welcome-text-image" src='./images/welcome.svg' alt="Добро пожаловать в Седону">
     </section>
     <div class="title-container">
       <h1 class="block-title">Седона — небольшой городок в Аризоне,<br>
